# campaign-orchestrator-agent

./: AGENT.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/campaign_orchestrator_agent/: __init__.py  cli.py  core.py
tests/: test_core.py
