[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campaign-orchestrator-agent"
version = "0.1.0"
description = "ABM campaign agent for account scoring, channel selection, and personalized sequencing."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/campaign-orchestrator-agent"
Issues = "https://github.com/erron-ai/campaign-orchestrator-agent/issues"

[project.scripts]
campaign-orchestrator-agent = "campaign_orchestrator_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
